--- a/prelims.tex
+++ b/prelims.tex
@@ -163,8 +163,7 @@ $$\xgate = \left[\begin{array}{cc} 0 & 1\\ 1 & 0\end{array}\right],
  \quad\hgate = \frac{1}{\sqrt{2}}\left[\begin{array}{cc}1 & 1\\1 & -1\end{array}\right], \quad\mbox{and}$$
 $$\quad\cnot = \left[\begin{array}{cccc} 1 & 0 & 0 & 0\\ 0 & 1 & 0 & 0\\ 0 & 0 & 0 & 1\\ 0 & 0 & 1 & 0\end{array}\right].$$
 
-
-\subsubsection*{Quantum One Time Pad
+\subsubsection*{Quantum One Time Pad}
 For any single-qubit density operator $\rho \in \mathcal{D} (\mathcal{H}_1)$ and for any uniformly chosen bits $s$ and $t,$ 
 $$
 \rho \mapsto \xgate^s \zgate^t \rho \zgate^t \xgate^s\,.
