--- a/intro.tex
+++ b/intro.tex
@@ -76,5 +76,5 @@ applications of gate-teleportation based quantum $i\mathcal{O}$ (for instance, t
 
 
 \subsection*{Outline}
-In section \ref{sec:QiO-Cliffords and more} We first define the notion of equivalent circuit, then we provide a definition of quantum indistinguishability obfuscation. We also show  how to construct quantum indistinguishability obfuscation for Clifford circuits from two different methodologies: One is based on canonical form of Clifford circuits while other is based on the principle of gate teleportation and a quantum secure $i\mathcal{O}.$ In section \ref{QiO:Clifford+T:family} we show that how to construct quantum indistinguishability obfuscation for any reversible quantum circuit that has at most logarithmic $\tgate$-gates in the size of the circuit.
+In section \ref{sec:QiO-Cliffords and more} we provide a new definition of quantum indistinguishability obfuscation. We provide two methodologies for constructing a quantum indistinguishability obfuscation for Clifford circuits. One is based on canonical form of Clifford circuits  while other is based on the principle of gate teleportation.  The construction based on canonical form requires no computational assumptions and is in fact perfectly indistinguishability obfuscation (information theoratically secure), where as the gate teleportation based construction assumes the existence of a quantum secure classical $i\mathcal{O}.$ In section \ref{QiO:Clifford+T:family} we show how to a construct quantum indistinguishability obfuscation from gate teleportation and $i\mathcal{O}$ for any reversible quantum circuit that has at most logarithmic $\tgate$-gates.
 
