Bib file edited

--- a/bib/abbr.bib
+++ b/bib/abbr.bib
@@ -111,8 +111,10 @@
 @String{ eurocrypt10          =   {EUROCRYPT 2010}}
 @String{ eurocrypt11          =   {EUROCRYPT 2011}}
 @String{ eurocrypt12          =   {EUROCRYPT 2012}}
+@String{ eurocrypt13          =   {EUROCRYPT 2013}}
 @String{ eurocrypt14          =   {EUROCRYPT 2014}}
 @String{ eurocrypt15          =   {EUROCRYPT 2015}}
+@String{ eurocrypt16          =   {EUROCRYPT 2016}}
 @String{ eurocrypt17          =   {EUROCRYPT 2017}}
 @String{ eurocrypt18          =   {EUROCRYPT 2018}}
 @String{ eurocrypt19          =   {EUROCRYPT 2019}}
