--- a/intro.tex
+++ b/intro.tex
@@ -6,7 +6,7 @@ A program obfuscation is a probabilistic polynomial-time algorithm that can tran
 
 An, $i\mathcal{O}$ is a probabilistic polynomial-time algorithm that takes a circuit $C$ as an input and outputs a circuit $i\mathcal{O}(C)$ such that $i\mathcal{O}(C)(x)=C(x)$ for all inputs $x$ and size of $i\mathcal{O}(C)$ is at most polynomial in the size $C.$ Moreover, it must be that for any two circuits $C_1$ and $C_2$ of the same size, the obfuscations of both circuits remain computationally indistinguishable, i.e. $iO(C_1)\sim^c iO(C_2).$ The $i\mathcal{O}$ achieves the notion of best possible obfuscations, which state that any information that is not hidden by the obfuscated circuit is also not hidden by any other similar size circuit computing the same functionality \cite{GR2014}. The indistinguishability obfuscation is a very powerful cryptographic tool which that has been shown to enable digital signatures, public key encryption~\cite{SW14}, multiparty key agreement, broadcast encryption~\cite{BZ14}, fully homomorphic encryption~\cite{CLTV15} and zero knowledge~\cite{BP15} etc. 
 
-The first candidate construction of $i\mathcal{O}$ was published in \cite{GGH+13}, whose security relied on the presume hardness of multilinear maps \cite{CLT13,GCH13, LSS14, GGH15}. Unfortunately, there have been many quantum attacks on some multilinear maps \cite{ABD16, CDPR16, CGH17}.  Recently, a new $i\mathcal{O}$ scheme has been proposed under the some different assumptions \cite{ALMS19}. However, It is too premature to say anything about the quantum security of this new construction \cite{ALMS19}. 
+The first candidate construction of $i\mathcal{O}$ was published in \cite{GGH+13}, whose security relied on the presume hardness of multilinear maps \cite{CLT13,GCH13, LSS14, GGH15}. Unfortunately, there have been many quantum attacks on some multilinear maps \cite{ABD16, CDPR16, CGH17}.  Recently, a new $i\mathcal{O}$ scheme has been proposed under the some different assumptions \cite{AJL+19}. However, It is too premature to say anything about the quantum security of this new construction \cite{AJL+19}. 
 
 In this work, we continue the study of computational indistinguishable obfuscation in the quantum world. The main contribution of this paper is to provide a new definition of quantum indistinguishability obfuscation $Qi\mathcal{O}$ and show how to construct a $Qi\mathcal{O}$ for certain families of quantum circuits. The first construction is based on the canonical representation of Clifford circuits~\cite{AG04}, while the second construction is based on the principle of gate teleportation~\cite{GC99}. The two constructions present different advantages: the technique using the canonical form is straightforward and does not require any computational assumption. Moreover, the obfuscated circuits are classical, and hence can be easily communicated, stored, used and copied.  In contrast, the gate-teleportation scheme requires the assumption of quantum-secure classical $i\mathcal{O}$ for a certain family of functions (section \ref{update function}) and the obfuscated circuits are quantum.\footnote{Note that our construction does not require a full $i\mathcal{O}$ but rather rely on a weaker $i\mathcal{O}$ that can obfuscate a certain family of functions.} While this presents a technological challenge to communication, storage and also usage, this methodology allow us to obfuscate a more general set of quantum circuit than the canonical base construction. Moreover the gate-teleportation methodology could also enable a new functionality related to the \emph{unclonability} of quantum states.
 
