--- a/bib/quantum.bib
+++ b/bib/quantum.bib
@@ -5769,123 +5769,121 @@
     DOI         =   {10.1109/SFCS.1989.63521},
 }
 
-%These are added by Raza on December 8, 2019. Need to be fixed by Sebastian the Great.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@Article{JMRW16,
+    Title       =   {Extended non-local games and monogamy-of-entanglement games},
+    Author      =   {Johston, Nathaniel and Mittal, Rajat and Russo, Vincent and Watrous, John},
+    Year        =   {2016},
+    Journal     =   prsla,
+    Volume      =   {472},
+    Number      =   {2189},
+    Pages       =   {20160003},
+    DOI         =   {10.1098/rspa.2016.0003},
+}
 
-@Article{ GR14,
+@Article{GR14,
     Title       =   {On Best-Possible Obfuscation},
-    Author      =   {Shafi Goldwasser and Guy N. Rothblum},
-    Journal     = Journal of Cryptology,
+    Author      =   {Goldwasser, Shafi and Rothblum, Guy N.},
     Year        =   {2014},
+    Journal     =   jcryp,
+    Volume      =   {27},
     Number      =   {3},
-    Pages       =   {480-505},
-    Volume    =   {27},
-    DOI         =   {10.1007/s00145-013-9151-z
-},
+    Pages       =   {480--505},
+    DOI         =   {10.1007/s00145-013-9151-z},
+}
 
-@Inproceedings{ALMS19,
+@Inproceedings{AJL+19,
     Title       =   {Indistinguishability Obfuscation Without Multilinear Maps: New Paradigms via Low Degree Weak Pseudorandomness and Security Amplification.},
-    Author      =   {Prabhanjan Ananth, Aayush Jain, Huijia Lin, Christian Matt  and Amit Sahai},
+    Author      =   {Ananth, Prabhanjan and Jain, Aayush and Lin, Huijia and Matt, Christian and Sahai, Amit},
     Year        =   {2019},
-    Booktitle   =  crypto2019 ,
-    Volume      =   {11694},
-    Pages       =   {284-332},
-    DOI         =   {},
+    Booktitle   =   crypto2019,
+    Volume      =   {3},
+    Pages       =   {284--332},
+    DOI         =   {10.1007/978-3-030-26954-8\_10},
 }
 
 @Inproceedings{CLT13,
     Title       =   {Practical Multilinear Maps over the Integers},
-    Author      =   {Jean-Sébastien Coron, Tancrède Lepoint and Mehdi Tibouchi},
+    Author      =   {Coron, Jean-Sébastien and Lepoint, Tancr{\`e}de and Tibouchi, Mehdi},
     Year        =   {2013},
-    Booktitle   =  crypto2013 ,
-    Volume      =   {8042},
-    Pages       =   {476-493},
-    DOI         =   {},
+    Booktitle   =   crypto2013,
+    Volume      =   {1},
+    Pages       =   {476--493},
+    DOI         =   {10.1007/978-3-642-40041-4\_26},
 }
 
-@Inproceedings{GCH13,
+@Inproceedings{GGH13,
     Title       =   {Candidate Multilinear Maps from Ideal Lattices},
-    Author      =   {Sanjam Garg, Craig Gentry and Shai Halevi},
+    Author      =   {Garg, Sanjam and Gentry, Craig and Halevi, Shai},
     Year        =   {2013},
-    Booktitle   =   eurocrypt2013,
-    Pages       =   {1-17},
-    DOI         =   {},
+    Booktitle   =   eurocrypt13,
+    Pages       =   {1--17},
+    DOI         =   {10.1007/978-3-642-38348-9\_1},
 }
 
 @Inproceedings{LSS14,
-    Title       =   {GGHLite: More Efficient Multilinear Maps from Ideal Lattices},
-    Author      =   {Adeline Langlois, Damien Steh\'el and Ron Steinfeld},
+    Title       =   {{GGHLite}: More Efficient Multilinear Maps from Ideal Lattices},
+    Author      =   {Langlois, Adeline and Stehl{\'e}, Damien and Steinfeld, Ron},
     Year        =   {2014},
-    Booktitle   = eurocrypt2014,
-    Pages       =   {239-256.},
-    DOI         =   {},
+    Booktitle   =   eurocrypt14,
+    Pages       =   {239--256},
+    DOI         =   {10.1007/978-3-642-55220-5\_14},
 }
 
 @Inproceedings{GGH15,
     Title       =   {Graph-Induced Multilinear Maps from Lattices},
-    Author      =   {Craig Gentry, Sergey Gorbunov and Shai Halevi},
+    Author      =   {Gentry, Craig and Gorbunov, Sergey and Halevi, Shai},
     Year        =   {2015},
-    Booktitle   =  TCC2015 ,
-    Pages       =   {498-527},
-    DOI         =   {},
+    Booktitle   =   tcc2015,
+    Volume      =   {2},
+    Pages       =   {498--527},
+    DOI         =   {10.1007/978-3-662-46497-7\_20},
 }
 
-
-
 @Inproceedings{ABD16,
-    Title       =   {A Subfield Lattice Attack on Overstretched NTRU Assumptions: Cryptanalysis of Some FHE and Graded Encoding Schemes},
-    Author      =   {Martin Albrecht, Shi Bai and L\'eo Ducas},
+    Title       =   {A Subfield Lattice Attack on Overstretched {NTRU} Assumptions},
+    Author      =   {Albrecht, Martin and Bai, Shi and Ducas, L{\'e}o},
     Year        =   {2016},
-    Booktitle   =  crypto2016 ,
-    Volume      =   {9814},
-    Pages       =   {153-178},
-    DOI         =   {},
+    Booktitle   =   crypto2016,
+    Volume      =   {1},
+    Pages       =   {153--178},
+    DOI         =   {10.1007/978-3-662-53018-4\_6},
 }
 
 @Inproceedings{CDPR16,
     Title       =   {Recovering Short Generators of Principal Ideals in Cyclotomic Rings},
-    Author      =   {Ronald Cramer, L\'eo Ducas, Chris Peikert and Oded Regev},
+    Author      =   {Cramer, Ronald and Ducas, L{\'e}o and Peikert, Chris and Regev, Oded},
     Year        =   {2016},
-    Booktitle   = eurocrypt2016 ,
-    Pages       =   {559-585},
-    DOI         =   {},
+    Booktitle   =   eurocrypt16,
+    Volume      =   {2},
+    Pages       =   {559--585},
+    DOI         =   {10.1007/978-3-662-49896-5\_20},
 }
 
 @Inproceedings{CGH17,
     Title       =   {Cryptanalyses of Candidate Branching Program Obfuscators},
-    Author      =   {Yilei Chen, Craig Gentry, and Shai Halevi.},
+    Author      =   {Chen, Yilei and Gentry, Craig and Halevi, Shai},
     Year        =   {2017},
-    Booktitle   =  eurocrypt2017 ,
-    Pages       =   {278-307},
-    DOI         =   {},
+    Booktitle   =   eurocrypt17,
+    Volume      =   {3},
+    Pages       =   {278--307},
+    DOI         =   {10.1007/978-3-319-56617-7\_10},
 }
 
-@Inproceedings{Z19,
+@Inproceedings{Zha19,
     Title       =   {Quantum Lightning Never Strikes the Same State Twice},
-    Author      =   {Mark Zhandry.},
+    Author      =   {Zhandry, Mark},
     Year        =   {2019},
-    Booktitle   =  eurocrypt2019 ,
-    Pages       =   {408-438},
-    DOI         =   {},
+    Booktitle   =   eurocrypt19,
+    Volume      =   {3},
+    Pages       =   {408--438},
+    DOI         =   {10.1007/978-3-030-17659-4\_14},
 }
 
 @Inproceedings{AJJ14,
-    Title       =   {Circuit Obfuscation Using Braids.},
-    Author      =   {Gorjan Alagic, Stacey Jeffery and Stephen P. Jordan:},
+    Title       =   {Circuit Obfuscation Using Braids},
+    Author      =   {Alagic, Gorjan and Jeffery, Stacey and Jordan, Stephen P.},
     Year        =   {2014},
-    Booktitle   =  TQC2014 ,
-    Pages       =   {141-160},
-    DOI         =   {},
+    Booktitle   =   tqc2014,
+    Pages       =   {141--160},
+    DOI         =   {10.4230/LIPIcs.TQC.2014.141},
 }
-
-
-@Misc{AF16arxiv,
-    Title = {On Quantum Obfuscation},
-    Author    = {Gorjan Alagic and Bill Fefferman},
-    HowPublished=   {Archive},
-    Year        =   {2016},
-    Url     =   {arXiv:1602.01771v1},
-}
-
-}
-
